--- a/NbaApi/Views/MainWindow.xaml
+++ b/NbaApi/Views/MainWindow.xaml
@@ -2,18 +2,19 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:NbaApi" xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800" Background="Black">
+    <Grid>
     <StackPanel>
         <ListView ItemsSource="{Binding AllTeams,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  SelectedItem="{Binding SelectedTeam}"
                       BorderThickness="6"
                      
                     >
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
-                    <i:InvokeCommandAction Command="{Binding SelectedTeamCommand}" CommandParameter="{Binding SelectedTeam}"  ></i:InvokeCommandAction>
+                    <i:InvokeCommandAction Command="{Binding SelectedTeamCommand}"></i:InvokeCommandAction>
                 </i:EventTrigger>
             </i:Interaction.Triggers>
 
@@ -76,7 +77,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
 
-                            <TextBlock  FontSize="30" FontWeight="ExtraBlack"
+                        <TextBlock  FontSize="30" FontWeight="ExtraBlack"
                     Text="{Binding No}" 
                     Width="50" Height="50" Background="DeepSkyBlue" ></TextBlock>
 
@@ -87,4 +88,5 @@
 
         </WrapPanel>
     </StackPanel>
+    </Grid>
 </Window>
